src/objects/VedaRequest__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Permissiontypecode__c</fullName>
        <label>Permissiontypecode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_data_level_code__c</fullName>
        <label>Product data level code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_type_code__c</fullName>
        <label>account-type-code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enquiry_client_reference__c</fullName>
        <label>enquiry-client-reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>operator_id__c</fullName>
        <label>operator-id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>operator_name__c</fullName>
        <label>operator-name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scorecard_id__c</fullName>
        <label>scorecard-id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Request Fields Values</label>
</CustomObject>